--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+   
+    body {background-image: url("backroundimage.jpg");}
 
 title: Welcome to my homepage
 description: Josh Misener Student ID s3799261
